; ModuleID = '/home/carl/AnghaBench/php-src/sapi/litespeed/extr_lsapilib.c_LSAPI_Write_Stderr_r.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/litespeed/extr_lsapilib.c_LSAPI_Write_Stderr_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i64, i64 }
%struct.lsapi_packet_header = type { i32 }
%struct.iovec = type { i32, i8* }

@s_stderr_log_path = common dso_local global i64 0, align 8
@LSAPI_MAX_DATA_PACKET_LEN = common dso_local global i32 0, align 4
@LSAPI_STDERR_STREAM = common dso_local global i32 0, align 4
@LSAPI_PACKET_HEADER_LEN = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LSAPI_Write_Stderr_r(%struct.TYPE_5__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.lsapi_packet_header, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca [2 x %struct.iovec], align 16
  %15 = alloca %struct.iovec*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %17 = icmp ne %struct.TYPE_5__* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %118

19:                                               ; preds = %3
  %20 = load i64, i64* @s_stderr_log_path, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %35, label %22

22:                                               ; preds = %19
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = icmp eq i32 %25, -1
  br i1 %26, label %35, label %27

27:                                               ; preds = %22
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = icmp eq i32 %30, %33
  br i1 %34, label %35, label %39

35:                                               ; preds = %27, %22, %19
  %36 = load i8*, i8** %6, align 8
  %37 = load i64, i64* %7, align 8
  %38 = call i32 @write(i32 2, i8* %36, i64 %37)
  store i32 %38, i32* %4, align 4
  br label %118

39:                                               ; preds = %27
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %41 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %40, i32 0, i32 2
  %42 = load i64, i64* %41, align 8
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %44 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %43, i32 0, i32 3
  %45 = load i64, i64* %44, align 8
  %46 = icmp ne i64 %42, %45
  br i1 %46, label %47, label %50

47:                                               ; preds = %39
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %49 = call i32 @LSAPI_Flush_r(%struct.TYPE_5__* %48)
  br label %50

50:                                               ; preds = %47, %39
  %51 = load i8*, i8** %6, align 8
  store i8* %51, i8** %10, align 8
  %52 = load i8*, i8** %6, align 8
  %53 = load i64, i64* %7, align 8
  %54 = getelementptr inbounds i8, i8* %52, i64 %53
  store i8* %54, i8** %9, align 8
  br label %55

55:                                               ; preds = %110, %50
  %56 = load i8*, i8** %9, align 8
  %57 = load i8*, i8** %10, align 8
  %58 = ptrtoint i8* %56 to i64
  %59 = ptrtoint i8* %57 to i64
  %60 = sub i64 %58, %59
  %61 = trunc i64 %60 to i32
  store i32 %61, i32* %11, align 4
  %62 = icmp sgt i32 %61, 0
  br i1 %62, label %63, label %111

63:                                               ; preds = %55
  %64 = load i32, i32* @LSAPI_MAX_DATA_PACKET_LEN, align 4
  %65 = load i32, i32* %11, align 4
  %66 = icmp slt i32 %64, %65
  br i1 %66, label %67, label %69

67:                                               ; preds = %63
  %68 = load i32, i32* @LSAPI_MAX_DATA_PACKET_LEN, align 4
  store i32 %68, i32* %11, align 4
  br label %69

69:                                               ; preds = %67, %63
  %70 = load i32, i32* @LSAPI_STDERR_STREAM, align 4
  %71 = load i32, i32* %11, align 4
  %72 = load i8*, i8** @LSAPI_PACKET_HEADER_LEN, align 8
  %73 = sext i32 %71 to i64
  %74 = getelementptr i8, i8* %72, i64 %73
  %75 = call i32 @lsapi_buildPacketHeader(%struct.lsapi_packet_header* %8, i32 %70, i8* %74)
  %76 = load i32, i32* %11, align 4
  %77 = load i8*, i8** @LSAPI_PACKET_HEADER_LEN, align 8
  %78 = sext i32 %76 to i64
  %79 = getelementptr i8, i8* %77, i64 %78
  %80 = ptrtoint i8* %79 to i32
  store i32 %80, i32* %12, align 4
  %81 = bitcast %struct.lsapi_packet_header* %8 to i8*
  %82 = getelementptr inbounds [2 x %struct.iovec], [2 x %struct.iovec]* %14, i64 0, i64 0
  %83 = getelementptr inbounds %struct.iovec, %struct.iovec* %82, i32 0, i32 1
  store i8* %81, i8** %83, align 8
  %84 = load i8*, i8** @LSAPI_PACKET_HEADER_LEN, align 8
  %85 = ptrtoint i8* %84 to i32
  %86 = getelementptr inbounds [2 x %struct.iovec], [2 x %struct.iovec]* %14, i64 0, i64 0
  %87 = getelementptr inbounds %struct.iovec, %struct.iovec* %86, i32 0, i32 0
  store i32 %85, i32* %87, align 16
  %88 = load i8*, i8** %10, align 8
  %89 = getelementptr inbounds [2 x %struct.iovec], [2 x %struct.iovec]* %14, i64 0, i64 1
  %90 = getelementptr inbounds %struct.iovec, %struct.iovec* %89, i32 0, i32 1
  store i8* %88, i8** %90, align 8
  %91 = load i32, i32* %11, align 4
  %92 = getelementptr inbounds [2 x %struct.iovec], [2 x %struct.iovec]* %14, i64 0, i64 1
  %93 = getelementptr inbounds %struct.iovec, %struct.iovec* %92, i32 0, i32 0
  store i32 %91, i32* %93, align 16
  %94 = load i32, i32* %11, align 4
  %95 = load i8*, i8** %10, align 8
  %96 = sext i32 %94 to i64
  %97 = getelementptr inbounds i8, i8* %95, i64 %96
  store i8* %97, i8** %10, align 8
  %98 = getelementptr inbounds [2 x %struct.iovec], [2 x %struct.iovec]* %14, i64 0, i64 0
  store %struct.iovec* %98, %struct.iovec** %15, align 8
  %99 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %100 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %99, i32 0, i32 0
  %101 = load i32, i32* %100, align 8
  %102 = load i32, i32* %12, align 4
  %103 = call i32 @lsapi_writev(i32 %101, %struct.iovec** %15, i32 2, i32 %102)
  store i32 %103, i32* %13, align 4
  %104 = load i32, i32* %13, align 4
  %105 = load i32, i32* %12, align 4
  %106 = icmp slt i32 %104, %105
  br i1 %106, label %107, label %110

107:                                              ; preds = %69
  %108 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %109 = call i32 @lsapi_close_connection(%struct.TYPE_5__* %108)
  store i32 -1, i32* %13, align 4
  br label %110

110:                                              ; preds = %107, %69
  br label %55

111:                                              ; preds = %55
  %112 = load i8*, i8** %10, align 8
  %113 = load i8*, i8** %6, align 8
  %114 = ptrtoint i8* %112 to i64
  %115 = ptrtoint i8* %113 to i64
  %116 = sub i64 %114, %115
  %117 = trunc i64 %116 to i32
  store i32 %117, i32* %4, align 4
  br label %118

118:                                              ; preds = %111, %35, %18
  %119 = load i32, i32* %4, align 4
  ret i32 %119
}

declare dso_local i32 @write(i32, i8*, i64) #1

declare dso_local i32 @LSAPI_Flush_r(%struct.TYPE_5__*) #1

declare dso_local i32 @lsapi_buildPacketHeader(%struct.lsapi_packet_header*, i32, i8*) #1

declare dso_local i32 @lsapi_writev(i32, %struct.iovec**, i32, i32) #1

declare dso_local i32 @lsapi_close_connection(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
